# drf-api-permissions-postgres

./: README.md  pyproject.toml
Blog/: settings.py  urls.py
Post/: models.py  serializer.py  tests.py  urls.py  views.py
Post/migrations/: 0001_initial.py  0002_rename_auther_post_author.py
